Updated express example
